--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-addon",
-  "version": "0.0.1",
+  "name": "project-status",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node app.js"
